Fix header tag in HTML and add wrap style

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ body {
 
 body * {
     margin: 0;
+    
 }
 
 * a {
@@ -16,7 +17,7 @@ body * {
 
 /* header style */
 
-.header {
+header {
     background-color: #1f2937;
     margin:0; 
     /* border: 2px solid red; */
@@ -27,20 +28,21 @@ ul a {
     color: #e5e7eb;
 }
 
-.header  * {
+header  * {
     margin: 5px;
 }
 
-.header .container {
+header .container {
     display: flex;
     justify-content: space-between;
     padding: 0px 300px ; 
     /* border: 2px solid red; */
     margin: 0;
     align-items: center;
+    flex-wrap: wrap;
 }
 
-.header .container ul {
+header .container ul {
     display: flex;
     list-style-type: none;
     gap: 25px;
@@ -48,11 +50,11 @@ ul a {
     align-items: center;
     /* border: 2px solid red; */
     margin: 0;
-    
+    flex-wrap: wrap;
     
 }
 
-.header .container .logo {
+header .container .logo {
     font-size: 24px;
     color: #f9faf8;
     text-align: center;
